replace triangular probing with linear. Rename table->hash. Use vector api directly to avoid multiple loads